[package]
name = "btc_sdk"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.*", features=["client"] }
tokio = { version = "1.*" }
log = { version = "0.*" }
iso8601 = { version = "0.*" }
url = { version = "2.*" }
http = { version = "0.*" }
serde = { version = "1.*", features=["derive"] }
serde_json = { version = "1.*" }
